feat: create swagger comments for every endpoint
